package org.blakkroze.calculia;

import javafx.application.Application;

public class Launcher {

    public static void main(String[] args) {

        Application.launch(Calculia.class, args);

    }

}
